OAKHILL/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Assets_Under_Advisement__c</fullName>
        <label>Assets Under Advisement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Under_Management__c</fullName>
        <label>Assets Under Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Opportunity_MN_Name__c</fullName>
        <formula>HYPERLINK(&apos;/006/e?opp4=&apos;+  Name + &apos;&amp;opp3=&apos; + Name + &apos; : &apos; +  TEXT(TODAY())+ &apos;&amp;opp11=Prospecting&amp;opp9=&apos; + TEXT(Month(TODAY())) + &apos;%2f&apos; + TEXT(DAY(today())) + &apos;%2f&apos; + TEXT(YEAR(TODAY() + 1)) , &quot;New Opportunity&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Legal_Entities__c</fullName>
        <label>Number of Legal Entities</label>
        <summaryForeignKey>Legal_Entity__c.Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OHA_AUM__c</fullName>
        <label>OHA AUM</label>
        <summarizedField>Legal_Entity__c.Summary__c</summarizedField>
        <summaryForeignKey>Legal_Entity__c.Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Email__c</fullName>
        <label>Account&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Invalid_SendGrid_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Account</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <namedFilters>
        <fullName>Opportunity_00Ni000000E5u9aEAB</fullName>
        <active>true</active>
        <field>Opportunity.Consultant__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Consultant</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000001n7ZpEAI_00Ni000000EJF8dEAH</fullName>
        <active>true</active>
        <field>Related_Account_Consultant__c.Consultant__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Consultant_Account</name>
    </namedFilters>
    <recordTypes>
        <fullName>Consultant</fullName>
        <active>true</active>
        <label>Consultant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <label>Organization</label>
    </recordTypes>
</CustomObject>